# python-template

./: .coveragerc  .gitattributes  .pre-commit-config.yaml  Pipfile  README.md  _build.sh  _env_python_setup.sh  _env_virtual_setup.sh  build.sh  env_python_setup.sh  env_virtual_setup.sh  pytest.ini  setup.cfg  setup.py
docker/: docker-compose-mssql.yml  docker-compose-mysql.yml  docker-compose-postgres.yml
docs/: readme.txt
jupyter/: readme.txt
src/: readme.txt
src/mypackage/: myscript.py
src/mypackage/config/: config.py  logging_config.py
tests/: readme.txt  test_config.py  test_myscript.py
