###############################################################################
#
#   Python and tools configuration file. Main for the project.
#
#   Useful resources:
#     - https://click.palletsprojects.com/en/8.0.x/setuptools/
#
#   Created:  Dmitrii Gusev, 30.01.2022
#   Modified: Dmitrii Gusev, 07.06.2022
#
###############################################################################


# -- mypy library config
[mypy]
ignore_missing_imports = True

# -- flake8 library config
[flake8]
# - list of ignored issues (E501 - too long line)
#ignore = E501
# - max cognitive complexity for statements
max-complexity = 10
# - adjustment to align with line length for black (it uses 88 chars by default)
# - we use the value = 110 as a default for the project
max-line-length = 110

# -- application / library metadata
# todo: adjust metadata for your own project
[metadata]
name = mypackage
version = attr: mypackage.VERSION
description = Template Project :: Your Project Description
author = Dmitrii Gusev
long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords = python, utility
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

# -- setuptools options
[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:

# todo: adjust dependencies, that should be installed
install_requires =
    pyyaml
    click

# -- path for sources searching
[options.packages.find]
where = src

# -- integration with setuptools (see link to click library)
[options.entry_points]
console_scripts =
  mypackage = mypackage.myscript:main
